--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "desafio02",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "app.js",
   "license": "MIT",
   "scripts": {
     "dev": "nodemon src/server.js"
